netcfg (0.13) unstable; urgency=low

  * NOT YET RELEASED
  * French templates thanks to laurb closes: #139918
  * some build cleanup

 -- David Kimdon <dwhedon@debian.org>  Tue,  7 May 2002 23:40:53 -0700

netcfg (0.12) unstable; urgency=low

  * Make netcfg-static actually work by calling num2dot at most once per
    sprintf, since num2dot uses a static buffer.

 -- Tollef Fog Heen <tfheen@debian.org>  Tue, 29 Jan 2002 21:12:31 +0100

netcfg (0.11) unstable; urgency=low

  * use new dpkg features so build is less cludgy 
  * dhcp and static templates thanks to 
    ilgiz kalmetev <i.kalmetev@bis.bashtelecom.ru>
    (closes: #114843, #114844, #114845)

 -- David Kimdon <dwhedon@debian.org>  Mon,  7 May 2001 23:31:11 -0700

netcfg (0.10) unstable; urgency=low

  * fix broken handling of nameservers, build with cdebconf-dev. 

 -- David Whedon <dwhedon@debian.org>  Wed, 14 Feb 2001 20:33:40 -0800

netcfg (0.09) unstable; urgency=low

  * make necessary dirs at build time rather than runtime
  * call it dhclient rather than dhclient-2.2.x

 -- David Whedon <dwhedon@debian.org>  Tue,  6 Feb 2001 21:41:50 -0800

netcfg (0.08) unstable; urgency=low

  * route is now in /sbin 

 -- David Whedon <dwhedon@debian.org>  Wed, 31 Jan 2001 09:58:18 -0800

netcfg (0.07) unstable; urgency=low

  * if a gateway is specified, netcfg-static needs to add a default route 

 -- David Whedon <dwhedon@debian.org>  Tue, 30 Jan 2001 23:30:18 -0800

netcfg (0.06) unstable; urgency=low

  * added German translations from Michael Bramer <grisu@debian.org> 
    (Closes: #83153, #83159)
  * automatically choose between dhcp-client or pump

 -- David Whedon <dwhedon@debian.org>  Tue, 23 Jan 2001 20:20:00 -0800

netcfg (0.05) unstable; urgency=low

  * added support for dhclient and pump.
  * removed support for dhcpcd. 
  * split things up more cleanly b/w dhcp and static.

 -- David Whedon <dwhedon@debian.org>  Sun, 21 Jan 2001 22:07:15 -0800

netcfg (0.04) unstable; urgency=low
