@@ -2,7 +2,7 @@ Source: netcfg
 Section: debian-installer
 Priority: standard
 Maintainer: David Kimdon <dwhedon@debian.org>
-Build-Depends: debhelper (>= 2.1.18), dpkg-dev (>= 1.9.0), cdebconf-dev
+Build-Depends: debhelper (>= 2.1.18), dpkg-dev (>= 1.9.0), cdebconf-dev, libdebian-installer-dev
 Standards-Version: 3.1.1
 
 Package: netcfg-dhcp
