@@ -3,6 +3,8 @@ netcfg (0.13) unstable; urgency=low
   * NOT YET RELEASED
   * French templates thanks to laurb closes: #139918
   * some build cleanup
+  * tfheen: Use libdebian-installer, thanks to thomas poindessous
+  * tfheen: Add libdebian-installer-dev to build-depends.
 
  -- David Kimdon <dwhedon@debian.org>  Tue,  7 May 2002 23:40:53 -0700
 
